# nvm-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  release.yml.disabled  rust-mac.yml
.github/workflows/jobs/: build_and_upload_linux.yaml
back-server/: Cargo.toml
back-server/src/: main.rs
cli/: Cargo.toml
cli/install/linux/: install.sh
cli/install/mac/: install.zsh
cli/install/win/: build.cmd  install.iss
cli/src/: main.rs  test.rs
cli/src/common/: arch.rs  mod.rs  node.rs  strings.rs  win_client.rs
install/linux/: install.sh  uninstall.sh
install/mac/: install.zsh  uninstall.zsh
install/win/: install.iss
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs
src/common/: arch.rs  cmd.rs  file.rs  filepath.rs  mod.rs  node.rs  strings.rs  web.rs
win/src/: main.rs
