[package]
name = "nvm-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nvm"  # 构建产物名称
path = "src/main.rs"          # 指定入口文件的路径

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
encoding = "0.2.33"
charset = "0.1.3"
zip = "0.6.6"
reqwest = "0.11.22"
url = "2.5.0"
http = "1.0.0"
log = "0.4.20"
env_logger = "0.10.1"
async-recursion = "1.0.5"
tokio = { version = "1.35.0", features = ["full"] }
semver="1.0.20"
anyhow = "1.0.75"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = "0.4.31"
windows = { version = "0.56.0", features = ["Security", "Security_Credentials", "Win32", "Win32_Security", "Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Threading", "Win32_System_WindowsProgramming"] }
term-table = "1.3.2"
winapi = {version = "0.3.9",features = ["consoleapi", "handleapi", "winbase", "winnt", "processenv"]}
goblin = "0.8.2"
flate2 = "1.0.30"
tar = "0.4.41"
sys-info = "0.9.1"
sysinfo = "0.30.12"
dialoguer = "0.11.0"
indicatif = "0.17.8"
console = "0.15.8"



